resources/styles/_antd-tweaks.less
@import '_antd-theme';

.ant-btn {
  border: 2px solid #4189ff;
  border-radius: 8px;
  color: #4189ff;
  font-size: 16px;
  font-weight: bold;
  line-height: 24px;
  min-width: 120px;

  &:hover {
    border-color: #0051bc;
    color: #0051bc;
  }

  &:disabled {
    color: #d3dcf5;
  }

  &:focus {
    border-color: #4189ff;
    box-shadow: 0 0 4px 1px #4189ff;
    color: #4189ff;
  }

  &:active {
    border-color: #00217d;
    color: #00217d;
  }

  &-primary {
    border: none;
    color: #ffffff;
  }

  &.ant-btn-primary {
    &:hover {
      background-color: #0051bc;
      color: #ffffff;
    }

    &:disabled {
      background-color: #e8efff;
    }

    &:focus {
      background-color: #4189ff;
      box-shadow: 0 0 4px 1px #4189ff;
      color: #ffffff;
    }

    &:active {
      background-color: #00217d;
      color: #ffffff;
    }
  }
}

.ant-input {
  border: 2px solid #e8efff;
  border-radius: 8px;
  font-size: 14px;
  line-height: 24px;

  &:disabled {
    border-color: #e8efff;
  }

  &:focus {
    border-color: #e8efff;
    box-shadow: 0 0 4px 1px #4189ff;
    color: #3d4564;
  }

  &.ant-input-lg {
    font-weight: bold;
    font-size: 16px;
  }
}

.ant-input-search.ant-input-search-enter-button > .ant-input {
  padding-left: 38px;
}

.ant-notification {
  .ant-notification-notice-description {
    font-size: 14px;
    color: #ffffff;
    line-height: 20px;
  }

  .ant-notification-notice-with-icon .ant-notification-notice-description {
    margin-left: 30px;
    margin-right: 30px;
  }

  .ant-notification-notice-with-icon .ant-notification-notice-message {
    font-size: 14px;
    font-weight: bold;
    color: #ffffff;
    line-height: 20px;
    margin-left: 30px;
  }

  .ant-notification-notice-message {
    max-width: 300px;
    word-wrap: break-word;
  }

  .ant-notification-notice-closable .ant-notification-notice-message {
    padding-right: 16px;
  }

  .ant-notification-notice {
    padding: 18px;
    border-radius: 8px;
  }

  .ant-notification-notice-icon {
    margin: 0px;
  }

  .ant-notification-close-icon {
    color: #ffffff;
    font-weight: 800;
  }
}

.ant-modal {
  .ant-modal-confirm-body {
    .anticon {
      color: @primary-color;
    }
  }
}

.ant-layout-header {
  height: auto;
}

.ant-form-explain,
.ant-form-extra {
  padding-left: 12px;
}

.ant-layout-content,
.ant-layout-header,
.ant-layout-footer {
  padding-left: 16px;
  padding-right: 16px;

  @media (min-width: 768px) {
    padding-left: 50px;
    padding-right: 50px;
  }
}

